C working, java needs a bit of rework